# OPRP-Mandelbrot

./: README.md  bench.sh  mandelbrot.in  plot.sh
cpp/: Makefile  mandelbrot.cpp
openmp/: Makefile  mandelbrot.cpp
plot/: .gitignore  plot_speedup.py
resultados/: log_cpp.csv  log_cpp.json  log_cpp.md  log_rust.csv  log_rust.json  log_rust.md  log_seq.csv  log_seq.json  log_seq.md
resultados/openmp/: README.md  log_cpp.json  log_openmp_dynamic.json  log_openmp_guided.json  log_openmp_static.json  log_rust.json
resultados/pthread/: README.md  log_cpp.csv  log_cpp.md  log_rust.csv
rust/: Cargo.toml
rust/src/: main.rs
seq/: mandelbrot.cpp
seq/__MACOSX/: ._mandelbrot.cpp
