[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.6"
num = "0.4.0"
num-traits = "0.2.15"
numeric-array = "0.5.2"
rayon = "1.5.3"
text_io = "0.1.12"
tokio = { version = "1.20.1", features = ["full"] }
